docs: remove user-facing content from developer docs
Address PR review feedback (batfish#9742):

- performance.md:
  - Remove vague heap size "rule of thumb" table (without sources)
  - Remove "Large-Scale Network Analysis" (pybatfish examples)
  - Remove "Analysis Optimization" (pybatfish examples)
  - Convert "Known Bottlenecks" to "Internal Performance Considerations"
  - Remove "Performance Benchmarks" section
  - Focus on developer-focused JVM/BDD/internal topics

- troubleshooting.md:
  - Convert "Runtime Errors" to "Parser Runtime Issues"
  - Remove user-facing "Performance Problems" section
  - Remove user-facing "Memory Issues" section
  - Add brief pointer to testing_guide.md for ref tests
  - Focus on build/test/parser/BDD developer issues

User-facing content (heap sizing, analysis optimization,
troubleshooting runtime errors) is documented in pybatfish
and readthedocs.io.